--- a/NETTSIDE/trondheim.html
+++ b/NETTSIDE/trondheim.html
@@ -207,7 +207,7 @@
         </div>
     </div>
     <div class="fullwidth_wrapper">
-        <div class="content_header_div">
+        <div class="content_header_div" style="width: 70%; margin: auto;">
             <!-- <h1 class="content_header_text colored_background">Rask og enkel deling av kjøretøy i Trondheim</h1> -->
             <h1 class="content_header_text colored_background">Vi åpner snart opp EDEL i Trondheim!</h1>
             <p class="content_header_description colored_background">I slutten av oktober/starten av november vil det være mulig å leie kjøretøy i Trondheim også! Vi vil ha et lagerlokale rett ved NTNU, <a href="https://goo.gl/maps/LKAMZoCMj5dvR6V26">Høgskoleringen 7</a>, her kan du leie bil og sykkel. Nedenfor kan du se et kart over hvor lokasjonen til vårt lokale vil være.</p>
