--- a/NETTSIDE/bergen.html
+++ b/NETTSIDE/bergen.html
@@ -207,9 +207,9 @@
         </div>
     </div>
     <div class="fullwidth_wrapper">
-        <div class="content_header_div">
+        <div class="content_header_div" style="width: 70%; margin: auto;">
             <h1 class="content_header_text colored_background">Rask og enkel deling av kjøretøy i Bergen</h1>
-            <p class="content_header_description colored_background">Vi har et lagerlokale ved <a href="https://goo.gl/maps/V1hAm63AxyBeuzLg9">Thormøhlens Gate 49</a>, her kan du leie bil, båt og sykkel.<br>Nedenfor kan du se et kart over lokasjonen til vårt lokale.</p>
+            <p class="content_header_description colored_background">Vi har et lagerlokale ved <a href="https://goo.gl/maps/V1hAm63AxyBeuzLg9">Thormøhlens Gate 49</a>, her kan du leie bil, båt og sykkel. Nedenfor kan du se et kart over lokasjonen til vårt lokale.</p>
         </div>
         <div id="map"></div>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV2hOQxr8q1SYcpiLutYFlAcN1ydgzApw&callback=initMap&v=weekly" defer></script>
